fix(#90): Fix the visibility of the actual rank element

--- a/services/files/front/components/leaderboard-component/leaderboard-component.css
+++ b/services/files/front/components/leaderboard-component/leaderboard-component.css
@@ -39,6 +39,7 @@
     padding: 0 30px 0 10px;
     border-radius: 0 0 12px 12px;
     border: 1px solid color-mix(in srgb, var(--primary-blue) 30%, transparent);
+    visibility: hidden;
 }
 
 leaderboard-element {
